# VibeStation

./: .gitignore  CMakeLists.txt  README.md  __cmake_probe.cmd  build-ninja.cmd
cmake/: increment_build_number.cmake
docs/: compatibility.md
resources/: vibestation.rc
src/: main.cpp
src/core/: audio_ring_buffer.cpp  audio_ring_buffer.h  bios.cpp  bios.h  cdrom.cpp  cdrom.h  cpu.cpp  cpu.h  cpu_recompiler.cpp  cpu_recompiler.h  cpu_recompiler_x64.cpp  dma.cpp  dma.h  gpu.cpp  gpu.h  gte.cpp  gte.h  input_recorder.cpp  input_recorder.h  interrupt.cpp  interrupt.h  mdec.cpp  mdec.h  pad_controller.h  ram.cpp  ram.h  renderer.cpp  renderer.h  sio.cpp  sio.h  spu.cpp  spu.h  system.cpp  system.h  timer.cpp  timer.h  types.h
src/platform/: cpu_backend_compare_runner.cpp  cpu_backend_compare_runner.h  disc_path_utils.cpp  disc_path_utils.h  memory_card_utils.cpp  memory_card_utils.h
src/ui/: app.cpp  app.h  app_discord_presence.cpp  emu_runner.cpp  emu_runner.h  input_bindings.cpp  input_bindings.h  output_resolution_utils.cpp  output_resolution_utils.h  screenshot_utils.cpp  screenshot_utils.h  theme_settings.cpp  theme_settings.h
src/ui/panels/: about_panel.cpp  audio_panel.cpp  bindings_config_panel.cpp  cpu_backend_panel.cpp  cpu_backend_panel.h  cpu_debug_panel.cpp  emulator_screen_panel.cpp  experimental_settings_panel.cpp  fmv_diagnostics_panel.cpp  grim_reaper_actions.cpp  grim_reaper_panel.cpp  grim_reaper_panel.h  grim_reaper_runtime.cpp  logging_panel.cpp  memory_card_panel.cpp  memory_card_panel.h  performance_overlay.cpp  settings_panel.cpp  sound_status_panel.cpp  system_panel.cpp  vram_panel.cpp
